--- a/gleam.toml
+++ b/gleam.toml
@@ -1,21 +1,11 @@
 name = "lustre_pipes"
 version = "0.0.1"
-gleam = ">= 1.1.0"
+gleam = ">= 1.4.0"
 
 description = "Write Lustre template using Gleam's pipes"
-repository = { type = "github", user = "weedonandscott", repo="lustre-pipes" }
-license = ["MIT"]
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
+licences = ["MIT"]
+repository = { type = "github", user = "weedonandscott", repo = "lustre_pipes" }
 
 [dependencies]
 gleam_stdlib = ">= 0.34.0 and < 2.0.0"
